# terminal-emulator

./: .gitignore  BUILD_STATUS.md  CURRENT_STATUS.md  FILES_TO_ADD.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_README.md  PHASE2_COMPLETE.md  PHASE3_METAL_IMPLEMENTATION.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  QUICKSTART.md  README.md  TESTING.md  XCODE_INTEGRATION_STEPS.md  add_files_simple.sh  add_files_to_xcode.rb  add_library_to_xcode.rb  fix_xcode_paths.rb  integrate.sh
core/: Cargo.toml  terminal_core.h
core/examples/: basic_test.rs
core/src/: ffi.rs  grid.rs  lib.rs  parser.rs  pty.rs  terminal.rs
macos/: BUILD_GUIDE.md
macos/TerminalEmulator/: build_rust.sh
macos/TerminalEmulator/TerminalEmulator/: AIAssistant.swift  AppDelegate.swift  ClipboardManager.swift  CursorRenderer.swift  GlyphCache.swift  Info.plist  LigatureHandler.swift  MetalRenderer.swift  PerformanceMonitor.swift  PluginManager.swift  ScrollAnimator.swift  SearchManager.swift  SessionManager.swift  SettingsManager.swift  Shaders.metal  SplitPaneManager.swift  TabManager.swift  TerminalCore.swift  TerminalEmulator-Bridging-Header.h  TerminalView.swift  TerminalViewController.swift  TerminalWindowController.swift  TextSelection.swift  ThemeManager.swift  VisualEffectsManager.swift  WorkingDirectoryTracker.swift
macos/TerminalEmulator/TerminalEmulator.xcodeproj/: project.pbxproj
