[package]
name = "terminal_core"
version = "0.1.0"
edition = "2024"

[lib]
name = "terminal_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
vte = "0.13"
nix = { version = "0.29", features = ["term", "process", "signal"] }
tokio = { version = "1.0", features = ["full"] }
libc = "0.2"
parking_lot = "0.12"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
